[package]
name = "forte_world"
license = "MIT"
description = "A semi-ECS implementation for the Forte Engine."
version = "0.1.0"
edition = "2021"
exclude = ["assets/"]

[dependencies]
cgmath = "0.18"
pollster = "0.3"
wgpu = "0.18"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
forte_engine = "0.1.1"

[dev-dependencies]
forte_cubes = "0.1.0"
